--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
 body {
     font-family: 'ABeeZee';font-size: 22px;
 }
+  .center {
+  margin: auto;
+  width: 60%;
+  border: 3px solid #73AD21;
+  padding: 10px;
+}
 </style>
  <h1>softwere hayven</h1>
     <link href="style.css" rel="stylesheet" type="text/css" />
