--- a/index.html
+++ b/index.html
@@ -14,5 +14,8 @@ body {
 </style>
  <h1>softwere hayven</h1>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    body {
+  background-image: url('background.jpg');
+}
 </head>
 </html>
