--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@ body {
 </style>
  <h1>softwere hayven</h1>
     <link href="style.css" rel="stylesheet" type="text/css" />
-    body {
-  background-image: url('background.jpg');
+    <style>
+body {
+  background-image: url('example_img_girl.jpg');
 }
+</style>
 </head>
 </html>
