--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body {
     <link href="style.css" rel="stylesheet" type="text/css" />
     <style>
 body {
-  background-image: url('background.jpg);
+  background-image: url('background.jpg')
 }
 </style>
 </head>
