--- a/index.html
+++ b/index.html
@@ -19,5 +19,10 @@ body {
   background-image: url('background.jpg')
 }
 </style>
+<style>
+h1 {text-align: center;}
+p {text-align: center;}
+div {text-align: center;}
+</style>
 </head>
 </html>
