--- a/index.html
+++ b/index.html
@@ -25,4 +25,18 @@ p {text-align: center;}
 div {text-align: center;}
 </style>
 </head>
+  <head>
+    <style>
+        .icon {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="icon">
+        <img src="icon.png" alt="icon">
+    </div>
+</body>
 </html>
